Updated dance script, sand r script, api page

--- a/robomaster/EP_dance.ipynb
+++ b/robomaster/EP_dance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -24,13 +24,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for robotic_gripper open 1;: ok\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ok'"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": [
-    "# robot.rotate('-5')\n",
-    "robot.move('x -0.3')"
+    "# robot.rotate('-20')\n",
+    "# robot.move('y 0.5')\n",
+    "# robot.movearm('x 0 y 100')\n",
+    "# robot.move('z 180 vz 100')\n",
+    "# robot.center()\n",
+    "robot.openarm()"
    ]
   },
   {
@@ -70,13 +95,90 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for chassis move x 0 y 0 z 30 vz 500;: ok\n\treply for chassis move x 0 y 0 z -30 vz 500;: ok\n\treply for chassis move x 0 y 0 z 30 vz 500;: ok\n\treply for chassis move x 0 y 0 z -30 vz 500;: ok\n\treply for chassis move x 0 y 0 z -300 vz 150;: ok\n\treply for chassis move x 0 y 0 z -30 vz 500;: ok\n\treply for chassis move x 0 y 0 z 30 vz 500;: ok\n\treply for chassis move x 0 y 0 z -30 vz 500;: ok\n\treply for chassis move x 0 y 0 z 30 vz 500;: ok\n"
+    }
+   ],
    "source": [
-    "robot"
+    "# Wiggle then swivel\n",
+    "\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -300 vz 150')\n",
+    "time.sleep(2.4)\n",
+    "robot.move('x 0 y 0 z -30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "\n",
+    "# robot.move('x 0 y -1 z 320 vxy 1 vz 300')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for chassis move x 0 y 0 z 30 vz 500;: ok\n\treply for chassis move x 0 y 0 z -30 vz 500;: ok\n\treply for chassis move x 0 y 0 z 30 vz 500;: ok\n\treply for chassis move x 0 y 0 z -15 vz 500;: ok\n\treply for robotic_arm move x 0 y 200;: fail\n\treply for robotic_arm move x 0 y -200;: fail\n\treply for robotic_arm move x 0 y 200;: fail\n\treply for robotic_arm move x 0 y -200;: fail\n\treply for chassis move x 0 y 0 z 30 vz 500;: ok\n\treply for robotic_arm move x 0 y 200;: fail\n\treply for chassis move x 0 y 0 z -50 vz 500;: ok\n\treply for robotic_arm move x 0 y -200;: fail\n"
+    }
+   ],
+   "source": [
+    "# Draw the square\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -15 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.movearm('x 0 y 200')\n",
+    "time.sleep(0.60)\n",
+    "robot.movearm('x 0 y -200')\n",
+    "time.sleep(0.60)\n",
+    "robot.movearm('x 0 y 200')\n",
+    "time.sleep(0.60)\n",
+    "robot.movearm('x 0 y -200')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z 30 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.movearm('x 0 y 200')\n",
+    "time.sleep(0.60)\n",
+    "robot.move('x 0 y 0 z -50 vz 500')\n",
+    "time.sleep(0.60)\n",
+    "robot.movearm('x 0 y -200')\n",
+    "time.sleep(0.60)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -90,6 +192,115 @@
    "source": [
     "robot.exit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for robotic_arm move x 0 y -200;: fail\n\treply for robotic_arm move x 0 y 200;: fail\n\treply for chassis move x 0 y 0 z -30 vz 500;: ok\n\treply for robotic_arm move x 0 y -200;: fail\n\treply for robotic_arm move x 0 y 200;: fail\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'fail'"
+     },
+     "metadata": {},
+     "execution_count": 335
+    }
+   ],
+   "source": [
+    "# Drumming\n",
+    "# robot.movearm('x 0 y 200')\n",
+    "# time.sleep(0.2)\n",
+    "# robot.movearm('x 0 y -200')\n",
+    "# time.sleep(0.3)\n",
+    "# robot.movearm('x 0 y 200')\n",
+    "# time.sleep(0.8)\n",
+    "# robot.movearm('x 0 y -200')\n",
+    "# time.sleep(0.3)\n",
+    "# robot.movearm('x 0 y 200')\n",
+    "# time.sleep(0.8)\n",
+    "# robot.movearm('x 0 y -200')\n",
+    "# time.sleep(0.3)\n",
+    "# robot.movearm('x 0 y 200')\n",
+    "# time.sleep(0.8)\n",
+    "robot.movearm('x 0 y -200')\n",
+    "time.sleep(0.3)\n",
+    "robot.movearm('x 0 y 200')\n",
+    "time.sleep(0.2)\n",
+    "robot.move('x 0 y 0 z -30 vz 500')\n",
+    "time.sleep(0.8)\n",
+    "robot.movearm('x 0 y -200')\n",
+    "time.sleep(0.2)\n",
+    "robot.movearm('x 0 y 200')\n",
+    "#time.sleep(1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for chassis move x 4 vxy 0.8;: ok\n\treply for chassis move x -0.05;: ok\n\treply for robotic_arm move x 0 y -100;: fail\n\treply for robotic_arm move x 0 y 100;: fail\n\treply for chassis move x -4 vxy 0.8;: ok\n\treply for chassis move x 0;: ok\n\treply for gimbal speed p 0 y 0;: ok\n\treply for robotic_arm stop;: ok\n\treply for chassis move z 180 vz 100;: ok\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ok'"
+     },
+     "metadata": {},
+     "execution_count": 373
+    }
+   ],
+   "source": [
+    "# Egyptian\n",
+    "robot.move('x 4 vxy 0.8')\n",
+    "time.sleep(1.6)\n",
+    "robot.move('x -0.05')\n",
+    "time.sleep(0.2)\n",
+    "robot.movearm('x 0 y -100')\n",
+    "time.sleep(0.6)\n",
+    "robot.movearm('x 0 y 100')\n",
+    "time.sleep(0.6)\n",
+    "robot.move('x -4 vxy 0.8')\n",
+    "time.sleep(1.7)\n",
+    "robot.stop()\n",
+    "robot.move('z 180 vz 100')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for chassis move x 0 y 0 z 30 vz 500;: ok\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ok'"
+     },
+     "metadata": {},
+     "execution_count": 308
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
