--- a/robomaster/test_EP.ipynb
+++ b/robomaster/test_EP.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from EP_api import Robot, findrobotIP\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {
     "tags": []
    },
@@ -20,16 +10,18 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "data sent is b'robot ip 192.168.1.122' from ('192.168.1.122', 46284)\nCommand socket: ok\n"
+     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 41037)\nCommand socket: ok\n"
     }
    ],
    "source": [
+    "from EP_api import Robot, findrobotIP\n",
+    "import time\n",
     "robot = Robot(findrobotIP()) # router"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {
     "tags": []
    },
@@ -37,33 +29,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "reply for chassis position ?;: -0.004 0.002 97.654 \n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'-0.004 0.002 97.654 '"
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
-    "# robot.rotate('90')\n",
-    "robot._sendcommand('chassis position ?')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "reply for robotic_gripper close 1;: ok\n\treply for robotic_gripper open 1;: ok\n"
+     "text": "reply for robotic_arm moveto x 182 y 0;: ok\n"
     },
     {
      "output_type": "execute_result",
@@ -71,48 +37,18 @@
       "text/plain": "'ok'"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 81
     }
    ],
    "source": [
-    "# robot.movearm('x -100 y 100')\n",
-    "# robot._sendcommand('robotic_arm recenter')\n",
-    "robot.closearm()\n",
-    "time.sleep(2)\n",
-    "robot.openarm()"
+    "# robot.rotate('90')\n",
+    "# robot._sendcommand('chassis position ?')\n",
+    "robot._sendcommand('robotic_arm moveto x 182 y 0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def moveX(dist):\n",
-    "    initialX = float(robot._sendcommand('chassis position ?').split(' ')[0])\n",
-    "    currentX = initialX\n",
-    "    while (currentX - initialX < (abs(dist)-0.2)):\n",
-    "        currentX = float(robot._sendcommand('chassis position ?').split(' ')[0])\n",
-    "        robot._sendcommand('chassis speed x 0.2 y 0 z 0')\n",
-    "    # robot._sendcommand('chassis speed x -0.05 y 0 z 0')\n",
-    "    # waitToStill()\n",
-    "    robot._sendcommand('chassis speed x 0 y 0 z 0')\n",
-    "def waitToStill():\n",
-    "    time.sleep(0.5)\n",
-    "    still = False\n",
-    "    while (still is False):\n",
-    "        state = robot._sendcommand('chassis status ?', echo=False).split(' ')\n",
-    "        # print (state)\n",
-    "        if state[0] == 'ok':\n",
-    "            continue\n",
-    "        elif int(state[0]) == 1:\n",
-    "            still = True\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -120,17 +56,72 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "reply for chassis move x -0.3 y 0 vxy 0.1;: ok\nDONE\n"
+     "text": "reply for robotic_gripper close 1;: ok\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ok'"
+     },
+     "metadata": {},
+     "execution_count": 74
     }
    ],
    "source": [
-    "robot.move('x -0.3 y 0 vxy 0.1')\n",
-    "\n",
-    "\n",
-    "# moveX(.5)\n",
-    "waitToStill()\n",
-    "print('DONE')\n",
-    "# robot.rotate('-90')"
+    "# robot.movearm('x -100 y 100')\n",
+    "# robot._sendcommand('robotic_arm recenter')\n",
+    "robot.closearm()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for robotic_gripper status ?;: 1 \n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1"
+     },
+     "metadata": {},
+     "execution_count": 78
+    }
+   ],
+   "source": [
+    "val = int(robot._sendcommand('robotic_gripper status ?'))\n",
+    "val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for robotic_gripper open 1;: ok\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ok'"
+     },
+     "metadata": {},
+     "execution_count": 75
+    }
+   ],
+   "source": [
+    "robot.openarm()"
    ]
   },
   {
@@ -152,15 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "reply for stream on;: 1 0 0 0 0 0 0 0 0 0 0 \nvideothread started!\nQuitting\nExiting...\n\treply for chassis move x 0;: ok\n\treply for gimbal speed p 0 y 0;: ok\n\treply for robotic_arm stop;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\n"
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-c8e0271e1546>, line 13)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c8e0271e1546>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    if k = ord('p'): # Take pic and save to screenshots\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -176,15 +170,22 @@
     "\tcv2.imshow('Live video', robot.frame) # access the video feed by robot.frame\n",
     "\n",
     "\tk = cv2.waitKey(16) & 0xFF\n",
+    "\tif k == ord('p'): # Take pic and save to screenshots\n",
+    "\t\tcv2.imwrite('screenshots/last.png',robot.frame)\n",
+    "\tif k == ord('o'): # Open claw\n",
+    "\t\trobot.openarm()\n",
+    "\tif k == ord('c'):\n",
+    "\t\trobot.closearm()\n",
     "\tif k == 27: # press esc to stop\n",
     "\t\tprint(\"Quitting\")\n",
     "\t\trobot.exit()\n",
-    "\t\tbreak"
+    "\t\tbreak\n",
+    "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {
     "tags": []
    },
@@ -218,12 +219,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.6.10-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python36964bitnotebookspipenv57eabbfff9a149fba4c264734c2a3b05",
-   "display_name": "Python 3.6.9 64-bit ('notebooks': pipenv)"
+   "name": "python361064bittil2020pipenvc13e4a599863495fbc0c295eb547fdc7",
+   "display_name": "Python 3.6.10 64-bit ('TIL-2020': pipenv)"
   }
  },
  "nbformat": 4,
