tested is_gripped and set_grip_threshold

--- a/robomaster/test_EP.ipynb
+++ b/robomaster/test_EP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -10,7 +10,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 41037)\nCommand socket: ok\n"
+     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 45076)\nCommand socket: ok\n"
     }
    ],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -37,7 +37,7 @@
       "text/plain": "'ok'"
      },
      "metadata": {},
-     "execution_count": 81
+     "execution_count": 2
     }
    ],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -117,7 +117,7 @@
       "text/plain": "'ok'"
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 2
     }
    ],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -143,18 +143,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grip_thresh = 7\n",
+    "def rescue_grip():\n",
+    "    robot._sendcommand('robotic_arm moveto x 182 y 0')\n",
+    "def calc_image():\n",
+    "    img = cv2.cvtColor(robot.frame,cv2.COLOR_BGR2GRAY)[549:625, 603:683]\n",
+    "    res = 0\n",
+    "    for row in img:\n",
+    "        res += sum(row)\n",
+    "    return res / sum([len(row) for row in img])\n",
+    "\n",
+    "def set_grip_threshold():\n",
+    "    global grip_thresh\n",
+    "    rescue_grip()\n",
+    "    time.sleep(2)\n",
+    "    robot.closearm()\n",
+    "    time.sleep(3)\n",
+    "    grip_thresh = calc_image()\n",
+    "    time.sleep(3)\n",
+    "    robot.openarm()\n",
+    "    robot.center() \n",
+    "    time.sleep(1)\n",
+    "    print(\"GRIP THRESHOLD: \",grip_thresh)\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def is_gripped():\n",
+    "    # val = int(robot._sendcommand('robotic_gripper status ?'))\n",
+    "    # if val == 1: return True\n",
+    "    # else: return False\n",
+    "    val = calc_image()\n",
+    "    print('CURRENT THRESHOLD: ',val)\n",
+    "    print('COMPARISON THRESHOLD: ',grip_thresh + 3)\n",
+    "    if val > (grip_thresh + 3) or val < (grip_thresh - 3): return True\n",
+    "    else: return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-c8e0271e1546>, line 13)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c8e0271e1546>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    if k = ord('p'): # Take pic and save to screenshots\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for stream on;: ok\nvideothread started!\n\treply for robotic_arm moveto x 182 y 0;: ok\n\treply for robotic_gripper close 1;: ok\n\treply for robotic_gripper open 1;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\nGRIP THRESHOLD:  26.28782894736842\nCURRENT THRESHOLD:  87.97878289473684\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  True\n\treply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  26.384703947368422\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  False\n\treply for robotic_gripper open 1;: ok\n\treply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  96.64276315789473\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  True\n\treply for robotic_gripper open 1;: ok\n\treply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  28.694736842105264\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  False\nCURRENT THRESHOLD:  28.11315789473684\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  False\nCURRENT THRESHOLD:  28.124013157894737\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  False\nCURRENT THRESHOLD:  28.170888157894737\nCOMPARISON THRESHOLD:  29.28782894736842\nGripped:  False\n\treply for robotic_gripper open 1;: ok\nQuitting\nExiting...\n\treply for chassis move x 0;: ok\n\treply for gimbal speed p 0 y 0;: ok\n\treply for robotic_arm stop;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\n\treply for stream off;: ok\n\treply for quit;: ok\nAll done\n"
     }
    ],
    "source": [
@@ -164,11 +203,12 @@
     "while robot.frame is None: # this is for video warm up. when frame is received, this loop is exited.\n",
     "\tpass\n",
     "\n",
-    "\n",
+    "initial_setup = False\n",
     "while True:\n",
     "\tcv2.namedWindow('Live video', cv2.WINDOW_NORMAL)\n",
     "\tcv2.imshow('Live video', robot.frame) # access the video feed by robot.frame\n",
-    "\n",
+    "\tif initial_setup is False:\n",
+    "            initial_setup = set_grip_threshold()\n",
     "\tk = cv2.waitKey(16) & 0xFF\n",
     "\tif k == ord('p'): # Take pic and save to screenshots\n",
     "\t\tcv2.imwrite('screenshots/last.png',robot.frame)\n",
@@ -176,6 +216,8 @@
     "\t\trobot.openarm()\n",
     "\tif k == ord('c'):\n",
     "\t\trobot.closearm()\n",
+    "\tif k == ord('t'): # Test if occupied\n",
+    "\t\tprint('Gripped: ',is_gripped())\n",
     "\tif k == 27: # press esc to stop\n",
     "\t\tprint(\"Quitting\")\n",
     "\t\trobot.exit()\n",
@@ -185,17 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Exiting...\n\treply for chassis move x 0;: ok\n\treply for gimbal speed p 0 y 0;: ok\n\treply for robotic_arm stop;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\n\treply for stream off;: ok\n\treply for quit;: ok\nAll done\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.exit()"
    ]
@@ -219,12 +255,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python361064bittil2020pipenvc13e4a599863495fbc0c295eb547fdc7",
-   "display_name": "Python 3.6.10 64-bit ('TIL-2020': pipenv)"
+   "name": "python36964bitnotebookspipenv57eabbfff9a149fba4c264734c2a3b05",
+   "display_name": "Python 3.6.9 64-bit ('notebooks': pipenv)"
   }
  },
  "nbformat": 4,
