moved api files to utils. changed imports accordingly
Object_detect has some testing code

--- a/robomaster/test_EP.ipynb
+++ b/robomaster/test_EP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -10,11 +10,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 45076)\nCommand socket: ok\n"
+     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 60797)\nCommand socket: ok\n"
     }
    ],
    "source": [
-    "from EP_api import Robot, findrobotIP\n",
+    "from utils.EP_api import Robot, findrobotIP\n",
     "import time\n",
     "robot = Robot(findrobotIP()) # router"
    ]
@@ -255,12 +255,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.6.10-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python36964bitnotebookspipenv57eabbfff9a149fba4c264734c2a3b05",
-   "display_name": "Python 3.6.9 64-bit ('notebooks': pipenv)"
+   "name": "python361064bittil2020pipenvc13e4a599863495fbc0c295eb547fdc7",
+   "display_name": "Python 3.6.10 64-bit ('TIL-2020': pipenv)"
   }
  },
  "nbformat": 4,
