--- a/robomaster/tellosux.ipynb
+++ b/robomaster/tellosux.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "from Tello_api import *\n",
+    "from utils.Tello_api import *\n",
     "import cv2\n",
     "import time\n",
     "\n",
