Did more testing of search_rescue functions.
Updated competition notes

Renamed detector functions (soz! HAHA)

Changed all abosulute windows filepaths to relative unix ones

--- a/robomaster/scrap_code.ipynb
+++ b/robomaster/scrap_code.ipynb
@@ -2,135 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1]\n\tdata sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 40522)\nCommand socket: ok\n"
+    }
+   ],
    "source": [
-    "from EP_api import Robot, findrobotIP\n",
+    "from search_rescue import *\n",
     "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "occupancy_grid = [\n",
-    "[1,1,1,1,1,1,1,1,1],\n",
-    "[1,0,1,0,1,0,1,0,1],\n",
-    "[1,1,1,1,1,1,1,1,1]\n",
-    "]\n",
-    "occupancy_grid_test = [\n",
-    "[1,1,1,1,1,1,1,1,1],\n",
-    "[1,0,0,0,1,0,1,0,0],\n",
-    "[0,1,1,1,1,1,1,1,1]\n",
-    "] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_loc = (0,1)\n",
-    "end_loc = (2,1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "def findAllAdjacent(current_loc,grid):\n",
-    "    search_range = [(-1,0),(0,1),(1,0),(0,-1)] #top, right, bot, left\n",
-    "    adj = []\n",
-    "    ref_row, ref_col = current_loc\n",
-    "    for i in range(4):\n",
-    "        row = ref_row + search_range[i][0]\n",
-    "        col = ref_col + search_range[i][1]\n",
-    "        if row < 0 or col < 0: continue\n",
-    "        try:\n",
-    "            if grid[row][col] == 1:\n",
-    "                adj.append((row,col))\n",
-    "        except: #out of bounds\n",
-    "            continue\n",
-    "    return adj\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def bfs(start_loc, end_loc, grid):\n",
-    "    dist = {}\n",
-    "    pred = {}\n",
-    "    visited = []\n",
-    "    queue = []\n",
-    "\n",
-    "    visited.append(start_loc)\n",
-    "    queue.append(start_loc)\n",
-    "    dist[start_loc] = 0\n",
-    "\n",
-    "    while queue:\n",
-    "        current_loc = queue.pop(0)\n",
-    "        \n",
-    "        adjacents = findAllAdjacent(current_loc,grid)\n",
-    "        for adjacent in adjacents:\n",
-    "            if adjacent not in visited:\n",
-    "                visited.append(adjacent)\n",
-    "                dist[adjacent] = dist[current_loc] + 1\n",
-    "                pred[adjacent] = current_loc\n",
-    "                queue.append(adjacent)\n",
-    "                if(adjacent == end_loc): return pred\n",
-    "\n",
-    "    "
+    "align([0,0,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "{(0, 2): (0, 1),\n (0, 0): (0, 1),\n (0, 3): (0, 2),\n (1, 0): (0, 0),\n (0, 4): (0, 3),\n (0, 5): (0, 4),\n (1, 4): (0, 4),\n (0, 6): (0, 5),\n (2, 4): (1, 4),\n (0, 7): (0, 6),\n (1, 6): (0, 6),\n (2, 5): (2, 4),\n (2, 3): (2, 4),\n (0, 8): (0, 7),\n (2, 6): (1, 6),\n (2, 2): (2, 3),\n (2, 7): (2, 6),\n (2, 1): (2, 2)}"
-     },
-     "metadata": {},
-     "execution_count": 61
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for chassis position ?;: -0.030 0.032 -3.440 \n\treply for chassis position ?;: -0.030 0.032 -3.440 \n\treply for chassis move x 0.5 vxy 0.1;: ok\nTrue\n"
     }
    ],
    "source": [
-    "pred = bfs(start_loc,end_loc,occupancy_grid_test)\n",
-    "pred"
+    "print(moveforward(0.5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[(2, 1), (2, 2), (2, 3), (2, 4), (1, 4), (0, 4), (0, 3), (0, 2), (0, 1)]"
-     },
-     "metadata": {},
-     "execution_count": 62
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for led control comp all r 255 g 0 b 0 effect blink;: ok\n\treply for led control comp all r 255 g 255 b 255 effect solid;: ok\n"
     }
    ],
    "source": [
-    "crawl = end_loc\n",
-    "path = [crawl]\n",
+    "flash_red()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for stream on;: ok\nvideothread started!\n\treply for robotic_arm moveto x 182 y 0;: ok\n\treply for robotic_gripper close 1;: ok\n\treply for robotic_gripper open 1;: ok\n\treply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\nGRIP THRESHOLD:  26.01529605263158\n\treply for robotic_arm moveto x 182 y 0;: ok\n"
+    }
+   ],
+   "source": [
+    "start_video()\n",
+    "set_grip_threshold()\n",
+    "rescue_grip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  24.695723684210527\n\treply for robotic_gripper open 1;: ok\n\treply for chassis move x 0.04 vxy 0.1;: ok\n\treply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  17.569572368421053\n\treply for robotic_gripper open 1;: ok\n\treply for chassis move x 0.04 vxy 0.1;: ok\n\treply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  13.162664473684211\n\treply for robotic_gripper open 1;: ok\n\treply for chassis move x 0.04 vxy 0.1;: ok\n\treply for robotic_gripper close 1;: ok\nCURRENT THRESHOLD:  44.54144736842105\n\treply for robotic_arm move x 0 y 50;: fail\n\treply for led control comp all r 0 g 255 b 0 effect blink;: ok\n\treply for led control comp all r 255 g 255 b 255 effect solid;: ok\nDONE\n"
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    if test_claw_algo(): break\n",
     "\n",
-    "while crawl != start_loc:\n",
-    "    path.append(pred[crawl])\n",
-    "    crawl = pred[crawl]\n",
-    "path\n"
+    "print('DONE')\n",
+    "        "
    ]
   },
   {
