--- a/robomaster/test_EP.ipynb
+++ b/robomaster/test_EP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -10,13 +10,43 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 60797)\nCommand socket: ok\n"
+     "text": "data sent is b'robot ip 192.168.1.215' from ('192.168.1.215', 48498)\nCommand socket: ok\n"
     }
    ],
    "source": [
     "from utils.EP_api import Robot, findrobotIP\n",
     "import time\n",
     "robot = Robot(findrobotIP()) # router"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "reply for led control comp all r 255 g 255 b 255 effect solid;: ok\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'ok'"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# robot.rotate('90')\n",
+    "# robot._sendcommand('chassis position ?')\n",
+    "# robot._sendcommand('robotic_arm moveto x 182 y 0')\n",
+    "# robot._sendcommand('led control comp all r 0 g 255 b 0 effect blink')\n",
+    "time.sleep(3)\n",
+    "robot._sendcommand('led control comp all r 255 g 255 b 255 effect solid')"
    ]
   },
   {
@@ -29,7 +59,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "reply for robotic_arm moveto x 182 y 0;: ok\n"
+     "text": "reply for gimbal moveto p 0 y 0;: ok\n\treply for robotic_arm recenter;: ok\n\treply for robotic_gripper open 1;: ok\n"
     },
     {
      "output_type": "execute_result",
@@ -41,36 +71,10 @@
     }
    ],
    "source": [
-    "# robot.rotate('90')\n",
-    "# robot._sendcommand('chassis position ?')\n",
-    "robot._sendcommand('robotic_arm moveto x 182 y 0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "reply for robotic_gripper close 1;: ok\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'ok'"
-     },
-     "metadata": {},
-     "execution_count": 74
-    }
-   ],
-   "source": [
     "# robot.movearm('x -100 y 100')\n",
     "# robot._sendcommand('robotic_arm recenter')\n",
-    "robot.closearm()\n"
+    "robot.center()\n",
+    "robot.openarm()\n"
    ]
   },
   {
@@ -255,12 +259,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python361064bittil2020pipenvc13e4a599863495fbc0c295eb547fdc7",
-   "display_name": "Python 3.6.10 64-bit ('TIL-2020': pipenv)"
+   "name": "python36964bitnotebookspipenv57eabbfff9a149fba4c264734c2a3b05",
+   "display_name": "Python 3.6.9 64-bit ('notebooks': pipenv)"
   }
  },
  "nbformat": 4,
