test code active

--- a/robomaster/script_tests.ipynb
+++ b/robomaster/script_tests.ipynb
@@ -77,9 +77,7 @@
     }
    ],
    "source": [
-    "start_video()\n",
-    "set_grip_threshold()\n",
-    "rescue_grip()"
+    "start_video()\n"
    ]
   },
   {
@@ -96,8 +94,7 @@
     }
    ],
    "source": [
-    "while True:\n",
-    "    if test_claw_algo(): break\n",
+    "test_object_centering()\n",
     "\n",
     "print('DONE')\n",
     "        "
